--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bower": "^1.7.9",
     "express": "^4.14.0",
     "socket.io": "^1.4.8"
   }
