--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bower": "^1.7.9",
     "express": "^4.14.0",
+    "lodash": "^4.15.0",
     "socket.io": "^1.4.8"
   }
 }
