--- a/public/bower.json
+++ b/public/bower.json
@@ -37,6 +37,8 @@
     "snackbarjs": "^1.1.0",
     "socket.io-client": "^1.4.8",
     "socket.io": "^1.4.8",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "ace-builds": "^1.2.5",
+    "angular-ui-ace": "^0.2.3"
   }
 }
