--- a/public/bower.json
+++ b/public/bower.json
@@ -39,6 +39,8 @@
     "socket.io": "^1.4.8",
     "underscore": "^1.8.3",
     "ace-builds": "^1.2.5",
-    "angular-ui-ace": "^0.2.3"
+    "angular-ui-ace": "^0.2.3",
+    "tether": "^1.3.7",
+    "angular-sanitize": "^1.5.8"
   }
 }
