--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bower": "^1.7.9",
+    "commander": "^2.9.0",
     "express": "^4.14.0",
     "lodash": "^4.15.0",
     "socket.io": "^1.4.8"
